<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>

    <string name="weight_label">Weight</string>
    <string name="weight_text">000</string>
    <string name="miles_ran">Miles Ran:</string>
    <string name="miles_ran_text">1mi</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="calories_burned_text">00.0</string>
    <string name="height_label">Height:</string>
    <string name="bmi_label">BMI:</string>
    <string name="bmi_text">00</string>


    <string-array name="feet_array">
        <item>ft</item>
        <item>1 ft</item>
        <item>2 ft</item>
        <item>3 ft</item>
        <item>4 ft</item>
        <item>5 ft</item>
        <item>6 ft</item>
        <item>7 ft</item>
        <item>8 ft</item>
        <item>9 ft</item>
        <item>10 ft</item>
    </string-array>

    <string-array name="inches_array">
        <item>in</item>
        <item>1 in</item>
        <item>2 in</item>
        <item>3 in</item>
        <item>4 in</item>
        <item>5 in</item>
        <item>6 in</item>
        <item>7 in</item>
        <item>8 in</item>
        <item>9 in</item>
        <item>10 in</item>
        <item>11 in</item>
    </string-array>

</resources>
